<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_placeholder">nadiar429@gmail.com</string>
    <string name="password">********</string>
    <string name="password_placeholder">********</string>
    <string name="login_text_label">Login to Account</string>
    <string name="avatar_image_description">avatar image</string>
    <string name="register_text_as_button">or create new Account</string>
    <string name="welcome_user_desc">Hi, welcome to Shoe Stroe app. You can brwose, pick, and buy your next awsome shoes!</string>
    <string name="welcome_user_title_label">Welcome {{User}}</string>
    <string name="next_button_label">Next</string>
    <string name="instruction_user_title">As simple as</string>
    <string name="intruction_user_description">Pick shoes you like to, click buy button, and your shoes are ready to deliver.</string>
    <string name="example_resources_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque tempor libero in lorem luctus, id ullamcorper ante accumsan. Vestibulum id purus eu felis finibus semper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse ut dui lacus. Sed suscipit lacinia odio. Aliquam vel cursus ante. Aliquam eget ultrices nunc. Duis congue tellus sed diam cursus aliquet. In non ante urna. Suspendisse vehicula massa nec suscipit aliquet. Integer luctus libero ligula, vel finibus augue pellentesque id. Suspendisse vulputate elit eget metus elementum dignissim. Pellentesque eleifend lorem ac metus vulputate, nec lacinia elit scelerisque. Nunc non sapien ac tellus facilisis luctus. Duis eros turpis, aliquam sit amet elit sit amet, ultrices laoreet mi.

Vestibulum congue odio sit amet nulla posuere rutrum. Duis dui odio, vehicula vitae erat sit amet, blandit mollis nunc. Nam leo ipsum, sagittis ac diam ut, facilisis rhoncus turpis. Suspendisse interdum justo nec blandit pharetra. Morbi porta ut dui eu placerat. Mauris efficitur erat in ante lobortis interdum. Donec nec mattis ante. Maecenas arcu risus, accumsan eget tellus vitae, venenatis mattis turpis. Cras in bibendum neque. Nunc sagittis magna vitae ex maximus lacinia. Nulla vel nunc rhoncus, hendrerit sem in, tempus lorem. Mauris tincidunt urna id lorem euismod, fringilla tristique ex mattis. Integer dignissim efficitur magna nec pellentesque. Praesent purus odio, commodo sit amet porta quis, fermentum sagittis nulla.

Aliquam lobortis ante sapien, vel condimentum tellus gravida et. Vivamus iaculis pulvinar quam eu mattis. Aenean ac hendrerit tortor. Ut varius aliquam odio quis sagittis. Phasellus ac elementum nulla, vitae consectetur velit. Curabitur a aliquam metus. Curabitur consectetur lorem at sapien lobortis pulvinar. In hac habitasse platea dictumst. In sed lorem lacinia, vehicula lectus in, interdum nibh. Integer aliquet nulla vitae magna hendrerit, at consequat mauris sollicitudin. Sed ac elit sed erat fringilla tristique sit amet at metus. Duis rutrum, neque eget porta aliquet, diam felis tristique ipsum, nec mollis tellus quam eu nunc. Nulla magna neque, consequat sed arcu at, sagittis efficitur urna.

Phasellus pulvinar quam viverra magna malesuada egestas. Phasellus condimentum magna nec velit ultricies tincidunt. Integer nec suscipit felis. Etiam elementum nulla eu leo mattis porttitor. Donec aliquet at mi ac lobortis. Pellentesque quis felis hendrerit, consequat tellus quis, viverra metus. Praesent ac accumsan metus, eget sagittis lacus. Cras aliquam nulla eget sem euismod ornare.

Duis feugiat pretium orci, euismod pharetra purus euismod sed. Sed velit est, tempor id facilisis sagittis, mollis eu turpis. Aliquam in mauris vulputate, sollicitudin nisl ut, vestibulum tellus. Quisque pulvinar efficitur nibh, eu hendrerit dolor auctor id. Ut magna enim, rutrum id vulputate sed, tempor non arcu. Duis efficitur egestas imperdiet. Ut diam risus, tempor ut velit in, mollis ornare lorem. Aliquam tincidunt, ipsum sit amet aliquam tempor, mauris tellus finibus ante, vel iaculis augue tellus vitae justo. Nullam feugiat metus nibh, eget interdum sem iaculis et. Fusce convallis lobortis turpis, eget ullamcorper nunc pellentesque ut. Integer diam nisl, condimentum eget enim quis, porttitor venenatis nibh. Ut auctor pharetra ex, id pretium dui laoreet at.
    </string>
</resources>
