<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OnboardingFragment">

    <!-- LinearLayout Start -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTextUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/welcome_user_title_label"
            style="@style/text_title_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_user_desc"
            style="@style/text_description_style" />

        <Button
            android:id="@+id/onboardingButton"
            android:layout_gravity="center"
            android:text="@string/next_button_label"
            tools:visibility="visible"
            style="@style/button_style" />

    </LinearLayout>
    <!-- LinearLayout End -->
</layout>